--- a/admin.html
+++ b/admin.html
@@ -6,7 +6,14 @@
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        /* Common Navigation and Styling */
+        /* Common Styling */
+        body {
+            font-family: Arial, sans-serif;
+            padding-top: 100px;
+            margin: 0;
+            background-color: #f4f4f4;
+        }
+
         nav {
             display: flex;
             justify-content: space-between;
@@ -19,6 +26,7 @@
             right: 0;
             z-index: 1000;
         }
+
         nav ul {
             list-style-type: none;
             margin: 0;
@@ -26,31 +34,28 @@
             display: flex;
             gap: 20px;
         }
-        nav ul li {
-            display: inline;
-        }
+
         nav a {
             text-decoration: none;
             color: white;
             font-size: 20px;
             padding: 8px 16px;
-            transition: 1s;
+            transition: background-color 0.3s;
         }
+
         nav a:hover {
-            background-color: #000000;
+            background-color: #000;
             border-radius: 5px;
         }
 
-        body {
-            padding-top: 100px;
-            font-family: Arial, sans-serif;
+        form {
+            margin: 20px;
+            background-color: white;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
-        form {
-            margin-left: 20px;
-            margin-top: 20px;
-        }
-        
         label {
             display: block;
             margin-bottom: 8px;
@@ -61,6 +66,8 @@
             padding: 8px;
             width: 100%;
             max-width: 400px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
         }
 
         button {
@@ -68,9 +75,10 @@
             background-color: #333;
             color: white;
             border: none;
+            border-radius: 5px;
             cursor: pointer;
         }
-        
+
         button:hover {
             background-color: #555;
         }
@@ -83,8 +91,9 @@
             display: none; /* Hidden initially */
         }
 
-        #patientDetails, #doctorDetails {
-            display: none; /* Hidden initially */
+        #successMessage {
+            color: green;
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -102,14 +111,13 @@
         </nav>
     </header>
 
-    <h2>Admin Dashboard</h2>
+    <h2 style="text-align: center;">Admin Dashboard</h2>
 
-    <h3>Manage Patients</h3>
+    <h3 style="text-align: center;">Manage Patients</h3>
     <form id="managePatientForm">
         <label for="managePatientId">Patient ID:</label>
-        <input type="text" id="managePatientId" required><br>
+        <input type="text" id="managePatientId" required>
         <button type="button" onclick="viewPatientDetails()">View Patient Details</button>
-        <button type="button" onclick="deletePatient()">Delete Patient</button>
     </form>
 
     <div id="patientDetails">
@@ -122,19 +130,18 @@
     </div>
 
     <!-- New Input Fields for Deleting Patient -->
-    <h3>Delete Patient</h3>
+    <h3 style="text-align: center;">Delete Patient</h3>
     <form id="deletePatientForm" onsubmit="deletePatientById(); return false;">
         <input type="text" id="deletePatientId" placeholder="Enter Patient ID" required>
         <button type="submit">Delete Patient</button>
     </form>
     <div id="successMessage" style="display:none;"></div>
 
-    <h3>Manage Doctors</h3>
+    <h3 style="text-align: center;">Manage Doctors</h3>
     <form id="manageDoctorForm">
         <label for="manageDoctorId">Doctor ID:</label>
-        <input type="text" id="manageDoctorId" required><br>
+        <input type="text" id="manageDoctorId" required>
         <button type="button" onclick="viewDoctorDetails()">View Doctor Details</button>
-        <button type="button" onclick="deleteDoctor()">Delete Doctor</button>
     </form>
 
     <div id="doctorDetails">
@@ -148,13 +155,12 @@
     </div>
 
     <!-- New Input Fields for Deleting Doctor -->
-    <h3>Delete Doctor</h3>
+    <h3 style="text-align: center;">Delete Doctor</h3>
     <form id="deleteDoctorForm" onsubmit="deleteDoctorById(); return false;">
         <input type="text" id="deleteDoctorId" placeholder="Enter Doctor ID" required>
         <button type="submit">Delete Doctor</button>
     </form>
-    <div id="successMessage" style="display:none;"></div>    
-
+    <div id="successMessage" style="display:none;"></div>
     <script src="script.js"></script>
 </body>
 </html>
