--- a/billing.html
+++ b/billing.html
@@ -6,6 +6,13 @@
     <title>Billing System</title>
     <style>
         /* Common Styling */
+        body {
+            font-family: Arial, sans-serif;
+            padding-top: 100px;
+            margin: 0;
+            background-color: #f4f4f4;
+        }
+
         nav {
             display: flex;
             justify-content: space-between;
@@ -27,31 +34,25 @@
             gap: 20px;
         }
 
-        nav ul li {
-            display: inline;
-        }
-
         nav a {
             text-decoration: none;
             color: white;
             font-size: 20px;
             padding: 8px 16px;
-            transition: 1s;
+            transition: background-color 0.3s;
         }
 
         nav a:hover {
-            background-color: #000000;
+            background-color: #000;
             border-radius: 5px;
         }
 
-        body {
-            padding-top: 100px;
-            font-family: Arial, sans-serif;
-        }
-
         form {
-            margin-left: 20px;
-            margin-top: 20px;
+            margin: 20px;
+            background-color: white;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
         label {
@@ -59,11 +60,13 @@
             margin-bottom: 8px;
         }
 
-        input {
+        input, select {
             margin-bottom: 15px;
             padding: 8px;
             width: 100%;
             max-width: 400px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
         }
 
         button {
@@ -71,11 +74,21 @@
             background-color: #333;
             color: white;
             border: none;
+            border-radius: 5px;
             cursor: pointer;
         }
 
         button:hover {
             background-color: #555;
+        }
+
+        .error {
+            color: red;
+            font-size: 14px;
+        }
+
+        .bill-display {
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -93,37 +106,43 @@
         </nav>
     </header>
 
-    <h2>Billing System</h2>
+    <h2 style="text-align: center;">Billing System</h2>
 
     <!-- Generate Bill -->
     <form id="billingForm">
         <label for="billPatientId">Patient ID:</label>
-        <input type="text" id="billPatientId" required><br>
+        <input type="text" id="billPatientId" required>
+        <div class="error" id="patientIdError"></div>
 
         <label for="medicine-cost">Medicine Cost:</label>
-        <input type="text" id="medicine-cost" required><br>
+        <input type="number" id="medicine-cost" required>
+        <div class="error" id="medicineCostError"></div>
 
         <label for="consulting-cost">Consulting Cost:</label>
-        <input type="text" id="consulting-cost" required><br>
+        <input type="number" id="consulting-cost" required>
+        <div class="error" id="consultingCostError"></div>
 
         <label for="hospitalization-charge">Hospitalization Charges:</label>
-        <input type="text" id="hospitalization-charge" required><br>
+        <input type="number" id="hospitalization-charge" required>
+        <div class="error" id="hospitalizationChargeError"></div>
 
         <label for="totalAmount">Total Amount:</label>
-        <input type="text" id="totalAmount" required><br>
+        <input type="number" id="totalAmount" required>
+        <div class="error" id="totalAmountError"></div>
 
         <button type="button" onclick="generateBill()">Generate Bill</button>
     </form>
 
-    <h3>View Bills</h3>
+    <h3 style="text-align: center;">View Bills</h3>
     <form id="viewBillForm">
         <label for="viewBillPatientId">Patient ID:</label>
-        <input type="text" id="viewBillPatientId" required><br>
+        <input type="text" id="viewBillPatientId" required>
+        <div class="error" id="viewPatientIdError"></div>
 
         <button type="button" onclick="viewBills()">View Bills</button>
     </form>
 
-    <div id="bills"></div>
+    <div id="bills" class="bill-display"></div>
 
     <script src="script.js"></script>
 </body>
