--- a/patient.html
+++ b/patient.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patient Management</title>
     <style>
-        /* Styling as before */
+        /* General styling */
+        body {
+            font-family: Arial, sans-serif;
+            padding-top: 100px;
+            margin: 0;
+            background-color: #f4f4f4;
+        }
+
         nav {
             display: flex;
             justify-content: space-between;
@@ -25,27 +32,24 @@
             display: flex;
             gap: 20px;
         }
-        nav ul li {
-            display: inline;
-        }
         nav a {
             text-decoration: none;
             color: white;
             font-size: 20px;
             padding: 8px 16px;
-            transition: 1s;
+            transition: background-color 0.3s;
         }
         nav a:hover {
-            background-color: #000000;
+            background-color: #000;
             border-radius: 5px;
         }
-        body {
-            padding-top: 100px;
-            font-family: Arial, sans-serif;
-        }
+
         form {
-            margin-left: 20px;
-            margin-top: 20px;
+            margin: 20px;
+            background-color: white;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
         label {
             display: block;
@@ -56,15 +60,17 @@
             padding: 8px;
             width: 100%;
             max-width: 400px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
         }
         button {
             padding: 10px 20px;
             background-color: #333;
             color: white;
             border: none;
+            border-radius: 5px;
             cursor: pointer;
         }
-        
         button:hover {
             background-color: #555;
         }
@@ -72,12 +78,15 @@
             color: green;
             margin-top: 20px;
         }
+        .error-message {
+            color: red;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
     <header>
         <nav>
-            <!-- Add Home and Patient Management links -->
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="patient.html">Patient Management</a></li>
@@ -90,7 +99,7 @@
     </header>
 
     <!-- Registration Form -->
-    <h3>Register Patient</h3>
+    <h3 style="text-align: center;">Register Patient</h3>
     <form id="patientForm">
         <label for="patient-id">Patient ID:</label>
         <input type="text" id="patient-id" required><br>
@@ -116,8 +125,9 @@
         <button type="button" onclick="registerPatient()">Register</button>
     </form>
 
-    <!-- Success message will appear here -->
+    <!-- Success and error messages will appear here -->
     <div id="successMessage" class="success-message"></div>
+    <div id="errorMessage" class="error-message"></div>
 
     <script src="script.js"></script>
 </body>
