--- a/appointment.html
+++ b/appointment.html
@@ -4,142 +4,101 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Appointment Booking</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-        /* Common Styling */
         body {
-            font-family: Arial, sans-serif;
             padding-top: 100px;
-            margin: 0;
-            background-color: #f4f4f4;
+            background-color: #f8f9fa; /* Light background color */
+            font-family: 'Arial', sans-serif;
         }
-
         nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #333;
-            padding: 10px 20px;
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            z-index: 1000;
+            background-color: #0056b3; /* Navy blue for header */
         }
-
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            gap: 20px;
-        }
-
         nav a {
-            text-decoration: none;
-            color: white;
-            font-size: 20px;
-            padding: 8px 16px;
-            transition: background-color 0.3s;
+            color: white !important; /* White text for navigation links */
         }
-
         nav a:hover {
-            background-color: #000;
-            border-radius: 5px;
+            background-color: #003d80 !important; /* Darker shade on hover */
         }
-
-        form {
-            margin: 20px;
-            background-color: white;
-            padding: 20px;
-            border-radius: 5px;
+        h2, h3 {
+            color: #0056b3; /* Consistent heading color */
+        }
+        .form-container {
+            background-color: #fff; /* White background for forms */
+            border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            margin-bottom: 20px;
         }
-
-        label {
-            display: block;
-            margin-bottom: 8px;
-        }
-
-        input, select {
-            margin-bottom: 15px;
-            padding: 8px;
-            width: 100%;
-            max-width: 400px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-
         button {
-            padding: 10px 20px;
-            background-color: #333;
+            background-color: #0056b3;
             color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
         }
-
         button:hover {
-            background-color: #555;
+            background-color: #003d80;
         }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-
-        th, td {
-            border: 1px solid #333;
-            padding: 8px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-
     </style>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="patient.html">Patient Management</a></li>
-                <li><a href="doctor.html">Doctor Management</a></li>
-                <li><a href="appointment.html">Appointment Booking</a></li>
-                <li><a href="billing.html">Billing System</a></li>
-                <li><a href="admin.html">Admin Dashboard</a></li>
+
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <a class="navbar-brand" href="">Hospital Management</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="patient.html">Patient Management</a></li>
+                <li class="nav-item"><a class="nav-link" href="doctor.html">Doctor Management</a></li>
+                <li class="nav-item"><a class="nav-link" href="appointment.html">Appointment Booking</a></li>
+                <li class="nav-item"><a class="nav-link" href="billing.html">Billing System</a></li>
+                <li class="nav-item"><a class="nav-link" href="admin.html">Admin Dashboard</a></li>
             </ul>
-        </nav>
-    </header>
+        </div>
+    </nav>
+</header>
 
-    <h2 style="text-align: center;">Appointment Booking</h2>
+<div class="container">
+    <h2>Appointment Booking</h2>
 
-    <h3 style="text-align: center;">Book Appointment</h3>
-    <form id="bookAppointmentForm">
-        <label for="bookPatientId">Patient ID:</label>
-        <input type="text" id="bookPatientId" required><br>
+    <div class="form-container">
+        <h3>Book Appointment</h3>
+        <form id="bookAppointmentForm">
+            <div class="form-group">
+                <label for="bookPatientId">Patient ID:</label>
+                <input type="text" class="form-control" id="bookPatientId" required>
+            </div>
+            <div class="form-group">
+                <label for="bookDoctorId">Doctor ID:</label>
+                <input type="text" class="form-control" id="bookDoctorId" required>
+            </div>
+            <div class="form-group">
+                <label for="bookAppointmentDate">Date:</label>
+                <input type="date" class="form-control" id="bookAppointmentDate" required>
+            </div>
+            <button type="button" class="btn btn-primary" onclick="bookAppointment()">Book</button>
+        </form>
+    </div>
 
-        <label for="bookDoctorId">Doctor ID:</label>
-        <input type="text" id="bookDoctorId" required><br>
+    <div class="form-container">
+        <h3>View Appointments</h3>
+        <form id="viewAppointmentsForm">
+            <div class="form-group">
+                <label for="viewAppPatientId">Patient ID:</label>
+                <input type="text" class="form-control" id="viewAppPatientId" required>
+            </div>
+            <button type="button" class="btn btn-primary" onclick="viewAppointments()">View</button>
+        </form>
+    </div>
 
-        <label for="bookAppointmentDate">Date:</label>
-        <input type="date" id="bookAppointmentDate" required><br>
+    <div id="appointments" class="mt-3"></div>
+</div>
 
-        <button type="button" onclick="bookAppointment()">Book</button>
-    </form>
-
-    <h3 style="text-align: center;">View Appointments</h3>
-    <form id="viewAppointmentsForm">
-        <label for="viewAppPatientId">Patient ID:</label>
-        <input type="text" id="viewAppPatientId" required><br>
-
-        <button type="button" onclick="viewAppointments()">View</button>
-    </form>
-
-    <div id="appointments"></div>
-
-    <script src="script.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="script.js" type="module"></script>
 </body>
 </html>
