--- a/appointment.html
+++ b/appointment.html
@@ -6,36 +6,68 @@
     <title>Appointment Booking</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
+        /* Common Styling */
         body {
             padding-top: 100px;
-            background-color: #f8f9fa; /* Light background color */
-            font-family: 'Arial', sans-serif;
+            background-color: #f8f9fa;
+            font-family: Arial, sans-serif;
         }
+
         nav {
-            background-color: #0056b3; /* Navy blue for header */
+            background-color: #0056b3;
         }
+
         nav a {
-            color: white !important; /* White text for navigation links */
+            color: white !important;
         }
+
         nav a:hover {
-            background-color: #003d80 !important; /* Darker shade on hover */
+            background-color: #003d80 !important;
         }
+
         h2, h3 {
-            color: #0056b3; /* Consistent heading color */
+            color: #0056b3;
         }
+
         .form-container {
-            background-color: #fff; /* White background for forms */
+            background-color: white;
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
-            margin-bottom: 20px;
+            margin: 20px auto;
+            max-width: 600px;
         }
+
+        .form-group label {
+            font-weight: bold;
+        }
+
         button {
             background-color: #0056b3;
             color: white;
         }
+
         button:hover {
             background-color: #003d80;
+        }
+
+        #appointments {
+            margin-top: 20px;
+        }
+
+        table {
+            width: 100%;
+            margin-top: 20px;
+            border-collapse: collapse;
+        }
+
+        th, td {
+            padding: 10px;
+            border: 1px solid #ddd;
+        }
+
+        th {
+            background-color: #f2f2f2;
         }
     </style>
 </head>
@@ -43,7 +75,7 @@
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <a class="navbar-brand" href="">Hospital Management</a>
+        <a class="navbar-brand" href="#">Hospital Management</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -61,7 +93,7 @@
 </header>
 
 <div class="container">
-    <h2>Appointment Booking</h2>
+    <h2 class="text-center">Appointment Booking</h2>
 
     <div class="form-container">
         <h3>Book Appointment</h3>
@@ -93,12 +125,13 @@
         </form>
     </div>
 
-    <div id="appointments" class="mt-3"></div>
+    <div id="appointments"></div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="script.js" type="module"></script>
+<script src="script.js"></script>
+
 </body>
 </html>
