--- a/billing.html
+++ b/billing.html
@@ -6,109 +6,154 @@
     <title>Billing System</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
+        /* Common Styling */
         body {
             padding-top: 100px;
-            background-color: #f8f9fa; /* Light background color */
-            font-family: 'Arial', sans-serif;
+            background-color: #f8f9fa;
+            font-family: Arial, sans-serif;
         }
+
         nav {
-            background-color: #0056b3; /* Navy blue for header */
+            background-color: #0056b3;
         }
+
         nav a {
-            color: white !important; /* White text for navigation links */
+            color: white !important;
         }
+
         nav a:hover {
-            background-color: #003d80 !important; /* Darker shade on hover */
+            background-color: #003d80 !important;
         }
+
         h2, h3 {
-            color: #0056b3; /* Consistent heading color */
+            color: #0056b3;
         }
+
         .form-container {
-            background-color: #fff; /* White background for forms */
+            background-color: white;
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
-            margin-bottom: 20px;
+            margin: 20px auto;
+            max-width: 600px;
         }
+
+        .form-group label {
+            font-weight: bold;
+        }
+
         button {
             background-color: #0056b3;
             color: white;
         }
+
         button:hover {
             background-color: #003d80;
+        }
+
+        #bills {
+            margin-top: 20px;
+        }
+
+        table {
+            width: 100%;
+            margin-top: 20px;
+            border-collapse: collapse;
+        }
+
+        th, td {
+            padding: 10px;
+            border: 1px solid #ddd;
+        }
+
+        th {
+            background-color: #f2f2f2;
         }
     </style>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-            <a class="navbar-brand" href="">Hospital Management</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="patient.html">Patient Management</a></li>
-                    <li class="nav-item"><a class="nav-link" href="doctor.html">Doctor Management</a></li>
-                    <li class="nav-item"><a class="nav-link" href="appointment.html">Appointment Booking</a></li>
-                    <li class="nav-item"><a class="nav-link" href="billing.html">Billing System</a></li>
-                    <li class="nav-item"><a class="nav-link" href="admin.html">Admin Dashboard</a></li>
-                </ul>
+
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <a class="navbar-brand" href="#">Hospital Management</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="patient.html">Patient Management</a></li>
+                <li class="nav-item"><a class="nav-link" href="doctor.html">Doctor Management</a></li>
+                <li class="nav-item"><a class="nav-link" href="appointment.html">Appointment Booking</a></li>
+                <li class="nav-item"><a class="nav-link" href="billing.html">Billing System</a></li>
+                <li class="nav-item"><a class="nav-link" href="admin.html">Admin Dashboard</a></li>
+            </ul>
+        </div>
+    </nav>
+</header>
+
+<div class="container">
+    <h2 class="text-center">Billing System</h2>
+
+    <!-- Generate Bill -->
+    <div class="form-container">
+        <h3>Generate Bill</h3>
+        <form id="billingForm">
+            <div class="form-group">
+                <label for="billPatientId">Patient ID:</label>
+                <input type="text" class="form-control" id="billPatientId" required>
+                <div class="error" id="patientIdError"></div>
             </div>
-        </nav>
-    </header>
 
-    <div class="container">
-        <h2>Billing System</h2>
+            <div class="form-group">
+                <label for="medicine-cost">Medicine Cost:</label>
+                <input type="number" class="form-control" id="medicine-cost" required>
+                <div class="error" id="medicineCostError"></div>
+            </div>
 
-        <!-- Generate Bill -->
-        <div class="form-container">
-            <h3>Generate Bill</h3>
-            <form id="billingForm">
-                <div class="form-group">
-                    <label for="billPatientId">Patient ID:</label>
-                    <input type="text" class="form-control" id="billPatientId" required>
-                </div>
+            <div class="form-group">
+                <label for="consulting-cost">Consulting Cost:</label>
+                <input type="number" class="form-control" id="consulting-cost" required>
+                <div class="error" id="consultingCostError"></div>
+            </div>
 
-                <div class="form-group">
-                    <label for="medicine-cost">Medicine Cost:</label>
-                    <input type="text" class="form-control" id="medicine-cost" required>
-                </div>
+            <div class="form-group">
+                <label for="hospitalization-charge">Hospitalization Charges:</label>
+                <input type="number" class="form-control" id="hospitalization-charge" required>
+                <div class="error" id="hospitalizationChargeError"></div>
+            </div>
 
-                <div class="form-group">
-                    <label for="consulting-cost">Consulting Cost:</label>
-                    <input type="text" class="form-control" id="consulting-cost" required>
-                </div>
+            <div class="form-group">
+                <label for="totalAmount">Total Amount:</label>
+                <input type="number" class="form-control" id="totalAmount" required>
+                <div class="error" id="totalAmountError"></div>
+            </div>
 
-                <div class="form-group">
-                    <label for="hospitalization-charge">Hospitalization Charges:</label>
-                    <input type="text" class="form-control" id="hospitalization-charge" required>
-                </div>
-
-                <button type="button" class="btn btn-primary" onclick="generateBill()">Generate Bill</button>
-            </form>
-        </div>
-
-        <!-- View Bills -->
-        <div class="form-container">
-            <h3>View Bills</h3>
-            <form id="viewBillForm">
-                <div class="form-group">
-                    <label for="viewBillPatientId">Patient ID:</label>
-                    <input type="text" class="form-control" id="viewBillPatientId" required>
-                </div>
-
-                <button type="button" class="btn btn-primary" onclick="viewBills()">View Bills</button>
-            </form>
-        </div>
-
-        <div id="bills"></div>
+            <button type="button" class="btn btn-primary" onclick="generateBill()">Generate Bill</button>
+        </form>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="script.js" type="module"></script>
+    <!-- View Bills -->
+    <div class="form-container">
+        <h3>View Bills</h3>
+        <form id="viewBillForm">
+            <div class="form-group">
+                <label for="viewBillPatientId">Patient ID:</label>
+                <input type="text" class="form-control" id="viewBillPatientId" required>
+                <div class="error" id="viewPatientIdError"></div>
+            </div>
+
+            <button type="button" class="btn btn-primary" onclick="viewBills()">View Bills</button>
+        </form>
+    </div>
+
+    <div id="bills"></div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="script.js"></script>
+
 </body>
 </html>
