--- a/doctor.html
+++ b/doctor.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doctor Management</title>
+    <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
@@ -11,18 +13,24 @@
             background-color: #f8f9fa; /* Light background color */
             font-family: 'Arial', sans-serif;
         }
+
         nav {
             background-color: #0056b3; /* Navy blue for header */
         }
+
         nav a {
             color: white !important; /* White text for navigation links */
         }
+
         nav a:hover {
             background-color: #003d80 !important; /* Darker shade on hover */
         }
-        h2, h3 {
+
+        h2,
+        h3 {
             color: #0056b3; /* Consistent heading color */
         }
+
         .form-container {
             background-color: #fff; /* White background for forms */
             border-radius: 8px;
@@ -30,24 +38,34 @@
             padding: 20px;
             margin-bottom: 20px;
         }
+
         button {
             background-color: #0056b3;
             color: white;
         }
+
         button:hover {
             background-color: #003d80;
         }
+
         .success-message {
             color: green;
             margin-top: 20px;
         }
+
+        .error-message {
+            color: red;
+            margin-top: 20px;
+        }
     </style>
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <a class="navbar-brand" href="">Hospital Management</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -118,13 +136,16 @@
             </form>
         </div>
 
-        <!-- Success message will appear here -->
+        <!-- Success message -->
         <div id="successMessage" class="success-message"></div>
+        <div id="errorMessage" class="error-message"></div>
     </div>
 
+    <!-- Include Bootstrap JS and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="script.js" type="module"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
