--- a/patient.html
+++ b/patient.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patient Management</title>
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
@@ -39,6 +40,10 @@
         }
         .success-message {
             color: green;
+            margin-top: 20px;
+        }
+        .error-message {
+            color: red;
             margin-top: 20px;
         }
     </style>
@@ -106,12 +111,15 @@
             </form>
         </div>
 
+        <!-- Success and error messages -->
         <div id="successMessage" class="success-message"></div>
+        <div id="errorMessage" class="error-message"></div>
     </div>
 
+    <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="script.js" type="module"></script>
+    <script src="script.js"></script>
 </body>
 </html>
